css: fixed text spacing on blog "read more" button

--- a/static/css/rosenpass.css
+++ b/static/css/rosenpass.css
@@ -560,7 +560,7 @@ align-self: center;
  .readmore  { 
     background-color: var(--bs-primary);  
     color: var(--bs-white);  
-    width: 7rem; 
+    width: 7.02rem; 
     border-radius:2rem;
     padding: 0.5rem 1rem!important;
     margin-bottom: 0;
